<resources>
    <string name="app_name">BTalk</string>
    <string name="req_status">Request Status</string>
    <string name="search">Search</string>
    <string name="profile_pic">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading_users">Loading user's list...</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="designation">Designation</string>
    <string name="status">Desig @ company</string>
    <string name="send_request">Send Request</string>
    <string name="decline_request">Decline Request</string>

</resources>
